--- a/src/css/resizableColumns.css
+++ b/src/css/resizableColumns.css
@@ -1,40 +1,52 @@
-.colResizeWrapper{
-    clear: both;
-    width: 100%;
-    height: 100%;
-}
-
-.colResizeLeft,.colResizeRight{
+#colResizeWrapper {
+  width: 100%;
+  height: 100%;
+  clear: both;
+  position: relative; }
+  #colResizeWrapper .colResizeLeft {
+    left: 0;
+    position: absolute;
+    top: 0;
+    bottom: 0; }
+  #colResizeWrapper .colResizeRight {
+    right: 0;
+    background: #fff;
     position: absolute;
     top: 0;
     bottom: 0;
-}
-
-
-.colResizeLeft{
-    left: 0;
-}
-
-.colResizeRight{
-    right: 0;
-    background: #fff;
-}
-
-.colResizeWrapper .colResizeFullCol{
-    width: 100vh;
-}
-
-.colResizeHandle{
+    overflow-y: scroll;
+    border-left: solid 4px transparent; }
+  #colResizeWrapper .colResizeFullCol {
+    width: 100vw; }
+  #colResizeWrapper .colResizeHandle {
     position: absolute;
-    left: -4px;
     top: 0;
     bottom: 0;
     width: 8px;
     cursor: w-resize;
-    z-index: 10;
-    background: #eee;
-}
+    z-index: 1000;
+    height: 100%;
+    background: #aaaaaa20; }
+    #colResizeWrapper .colResizeHandle:hover {
+      background: #aaaaaa50; }
 
-.colResizeHandle:hover{
-    background: #ccc;
-}
+.demo .topbar {
+  position: fixed;
+  width: 100%;
+  height: 50px;
+  z-index: 1000;
+  background: #bbb;
+  top: 0;
+  left: 0; }
+.demo .sidebar {
+  width: 250px;
+  top: 50px;
+  height: calc(100vh - 50px);
+  background: #ccc;
+  float: left; }
+.demo .container {
+  width: calc(100vw - 300px);
+  overflow: hidden;
+  margin: 50px auto 0; }
+
+/*# sourceMappingURL=resizableColumns.css.map */
