--- a/src/css/resizableColumns.scss
+++ b/src/css/resizableColumns.scss
@@ -10,6 +10,7 @@
     position: absolute;
     top: 0;
     bottom: 0;
+    overflow-y: auto;
   }
 
   .colResizeRight {
@@ -18,7 +19,7 @@
     position: absolute;
     top: 0;
     bottom: 0;
-    overflow-y: scroll;
+    overflow-y: auto;
     border-left: solid 4px transparent;
   }
 
